Fixed Firefox layout problem

--- a/_includes/styles/style.css
+++ b/_includes/styles/style.css
@@ -502,7 +502,7 @@ body.start {
 .repos > a .name {
   display: inline-block;
   vertical-align: middle;
-  width: 120px;
+  width: 116px;
   font-size: 12px;
   text-align: center;
   overflow: hidden;
@@ -708,7 +708,7 @@ ul.site li a {
 .post-listing a.link .filename {
   display: inline-block;
   vertical-align: middle;
-  width: 120px;
+  width: 116px;
   font-size: 12px;
   text-align: center;
   overflow: hidden;
